force-app/main/default/objects/Contact/fields/Accessibility_and_Responsiveness_del__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_and_Responsiveness_del__c</fullName>
    <label>Accessibility and Responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>