force-app/main/default/objects/Contact/fields/Account_1_1_Attended__c.field-meta.xml
<CustomField>
    <fullName>Account_1_1_Attended__c</fullName>
    <formula>Account.X1_1_Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 1-1 Attended</label>
    <type>Checkbox</type>
</CustomField>