force-app/main/default/objects/Contact/fields/Account_1_1_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Account_1_1_Scheduled__c</fullName>
    <formula>Account.X1_1_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 1-1 Scheduled</label>
    <type>DateTime</type>
</CustomField>