force-app/main/default/objects/Contact/fields/Account_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead_Source__c</fullName>
    <formula>Account.lead_source_old__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lead Source</label>
    <type>Text</type>
</CustomField>