force-app/main/default/objects/Contact/fields/Account_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>Account_OwnerID__c</fullName>
    <formula>Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OwnerID</label>
    <type>Text</type>
</CustomField>