force-app/main/default/objects/Contact/fields/Accounting_Knowledge_del__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Knowledge_del__c</fullName>
    <label>Accounting Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>