force-app/main/default/objects/Contact/fields/Acct_Attended_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Acct_Attended_Webinar__c</fullName>
    <formula>Account.Attended_Webinar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Attended Webinar</label>
    <type>Checkbox</type>
</CustomField>