force-app/main/default/objects/Contact/fields/Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Name</label>
    <type>Text</type>
</CustomField>