force-app/main/default/objects/Contact/fields/Acct_Webinar_Request__c.field-meta.xml
<CustomField>
    <fullName>Acct_Webinar_Request__c</fullName>
    <formula>Account.Webinar_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Webinar Request</label>
    <type>DateTime</type>
</CustomField>