force-app/main/default/objects/Contact/fields/Active_Products__c.field-meta.xml
<CustomField>
    <fullName>Active_Products__c</fullName>
    <formula>Account.Active_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Products</label>
    <type>Text</type>
</CustomField>