force-app/main/default/objects/Contact/fields/Advisory_1_Completed__c.field-meta.xml
<CustomField>
    <fullName>Advisory_1_Completed__c</fullName>
    <formula>Account.Advisory_1_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory #1 Completed</label>
    <type>Checkbox</type>
</CustomField>