force-app/main/default/objects/Contact/fields/Advisory_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Advisory_2_Completed__c</fullName>
    <formula>Account.Advisory_2_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisory #2 Completed</label>
    <type>Checkbox</type>
</CustomField>