force-app/main/default/objects/Contact/fields/Advisory_Status__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Status__c</fullName>
    <description>This status tells us what stage in the Advisory Series the client currently resides in. Formula value from the Account field</description>
    <formula>TEXT(Account.Advisory_Status__c)</formula>
    <inlineHelpText>The next scheduled meeting for the client&apos;s Advisory Series</inlineHelpText>
    <label>Advisory Status</label>
    <type>Text</type>
</CustomField>