force-app/main/default/objects/Contact/fields/Android_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Android_Last_Activity__c</fullName>
    <description>Android User last activity date and time in ClientBooks</description>
    <label>Android Last Activity</label>
    <type>DateTime</type>
</CustomField>