force-app/main/default/objects/Contact/fields/Android_User__c.field-meta.xml
<CustomField>
    <fullName>Android_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if user uses CB Android app</description>
    <label>Android User</label>
    <type>Checkbox</type>
</CustomField>