force-app/main/default/objects/Contact/fields/Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Batch_Code__c</fullName>
    <formula>Account.Batch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Code</label>
    <type>Text</type>
</CustomField>