force-app/main/default/objects/Contact/fields/Bill62__Bill_to_Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Bill_to_Head_of_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill to Head of Household</label>
    <type>Checkbox</type>
</CustomField>