force-app/main/default/objects/Contact/fields/Bill62__Category__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Bill62__Category__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>