force-app/main/default/objects/Contact/fields/Bill62__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>