force-app/main/default/objects/Contact/fields/Bill62__Fax__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Fax__c</fullName>
    <label>Fax #</label>
    <type>Phone</type>
</CustomField>