force-app/main/default/objects/Contact/fields/Bill62__Grad_Year__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Grad_Year__c</fullName>
    <label>Grad Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1930</fullName>
            </value>
            <value>
                <fullName>1931</fullName>
            </value>
            <value>
                <fullName>1932</fullName>
            </value>
            <value>
                <fullName>1933</fullName>
            </value>
            <value>
                <fullName>1934</fullName>
            </value>
            <value>
                <fullName>1935</fullName>
            </value>
            <value>
                <fullName>1936</fullName>
            </value>
            <value>
                <fullName>1937</fullName>
            </value>
            <value>
                <fullName>1938</fullName>
            </value>
            <value>
                <fullName>1939</fullName>
            </value>
            <value>
                <fullName>1940</fullName>
            </value>
            <value>
                <fullName>1941</fullName>
            </value>
            <value>
                <fullName>1942</fullName>
            </value>
            <value>
                <fullName>1943</fullName>
            </value>
            <value>
                <fullName>1944</fullName>
            </value>
            <value>
                <fullName>1945</fullName>
            </value>
            <value>
                <fullName>1946</fullName>
            </value>
            <value>
                <fullName>1947</fullName>
            </value>
            <value>
                <fullName>1948</fullName>
            </value>
            <value>
                <fullName>1949</fullName>
            </value>
            <value>
                <fullName>1950</fullName>
            </value>
            <value>
                <fullName>1951</fullName>
            </value>
            <value>
                <fullName>1952</fullName>
            </value>
            <value>
                <fullName>1953</fullName>
            </value>
            <value>
                <fullName>1954</fullName>
            </value>
            <value>
                <fullName>1955</fullName>
            </value>
            <value>
                <fullName>1956</fullName>
            </value>
            <value>
                <fullName>1957</fullName>
            </value>
            <value>
                <fullName>1958</fullName>
            </value>
            <value>
                <fullName>1959</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>