force-app/main/default/objects/Contact/fields/Bill62__HashCode__c.field-meta.xml
<CustomField>
    <fullName>Bill62__HashCode__c</fullName>
    <label>HashCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>