force-app/main/default/objects/Contact/fields/Bill62__Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Head_of_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head of Household</label>
    <type>Checkbox</type>
</CustomField>