force-app/main/default/objects/Contact/fields/Bill62__HouseHold_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bill62__HouseHold_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HouseHold Flag</label>
    <type>Checkbox</type>
</CustomField>