force-app/main/default/objects/Contact/fields/Bill62__Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Join_Date__c</fullName>
    <label>Join Date</label>
    <type>Date</type>
</CustomField>