force-app/main/default/objects/Contact/fields/Bill62__Last_Invoice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Last_Invoice_End_Date__c</fullName>
    <label>Last Invoice End Date</label>
    <type>Date</type>
</CustomField>