force-app/main/default/objects/Contact/fields/Bill62__Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Last_Payment_Date__c</fullName>
    <label>Last Payment Date</label>
    <type>DateTime</type>
</CustomField>