force-app/main/default/objects/Contact/fields/Bill62__Master_Duplicate_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Master_Duplicate_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Duplicate Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Master Duplicate Customer)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>