force-app/main/default/objects/Contact/fields/Bill62__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>