force-app/main/default/objects/Contact/fields/Bill62__Occupation__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>