force-app/main/default/objects/Contact/fields/Bill62__Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Other_Email__c</fullName>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>