force-app/main/default/objects/Contact/fields/Bill62__Possible_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Possible_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Duplicate</label>
    <type>Checkbox</type>
</CustomField>