force-app/main/default/objects/Contact/fields/Bill62__Reinstatement_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Reinstatement_Date__c</fullName>
    <label>Reinstatement Date</label>
    <type>Date</type>
</CustomField>