force-app/main/default/objects/Contact/fields/Bill62__Resignation_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Resignation_Date__c</fullName>
    <label>Resignation Date</label>
    <type>Date</type>
</CustomField>