force-app/main/default/objects/Contact/fields/Bill62__Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>