force-app/main/default/objects/Contact/fields/Bill62__Spouse__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Spouse</relationshipLabel>
    <relationshipName>Spouse</relationshipName>
    <type>Lookup</type>
</CustomField>