force-app/main/default/objects/Contact/fields/Bill62__SSN__c.field-meta.xml
<CustomField>
    <fullName>Bill62__SSN__c</fullName>
    <inlineHelpText>Social Security Number - Don&apos;t include &apos;-&apos; (Dashes)</inlineHelpText>
    <label>SSN</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>