force-app/main/default/objects/Contact/fields/Bill62__Subscription_Generation__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Subscription_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Generation?</label>
    <type>Checkbox</type>
</CustomField>