force-app/main/default/objects/Contact/fields/Bill62__Suffix__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Suffix__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>