force-app/main/default/objects/Contact/fields/Bill62__Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>