force-app/main/default/objects/Contact/fields/Bill62__Title__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>