force-app/main/default/objects/Contact/fields/Bill62__Unpaid_Dues__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Unpaid_Dues__c</fullName>
    <label>Unpaid Dues</label>
    <summarizedField>Bill62__Subscription__c.Bill62__Unpaid_Dues__c</summarizedField>
    <summaryFilterItems>
        <field>Bill62__Subscription__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Direct Payment Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>Bill62__Subscription__c.Bill62__Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>