force-app/main/default/objects/Contact/fields/Bill62__Unpaid_Invoice_Amount_Due_31_60__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Unpaid_Invoice_Amount_Due_31_60__c</fullName>
    <label>Unpaid Invoice Amount Due 31-60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>