force-app/main/default/objects/Contact/fields/Bill62__Unpaid_Invoice_Amount_Due_90__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Unpaid_Invoice_Amount_Due_90__c</fullName>
    <label>Unpaid Invoice Amount Due 90+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>