force-app/main/default/objects/Contact/fields/Bill62__Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>