force-app/main/default/objects/Contact/fields/Bill62_Initial_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62_Initial_Payment_Date__c</fullName>
    <label>Bill62 Initial Payment Date</label>
    <summarizedField>Bill62__Subscription__c.Bill62__Start_Date__c</summarizedField>
    <summaryForeignKey>Bill62__Subscription__c.Bill62__Customer__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>