force-app/main/default/objects/Contact/fields/Bill62_Total_Processed_Payments_date__c.field-meta.xml
<CustomField>
    <fullName>Bill62_Total_Processed_Payments_date__c</fullName>
    <inlineHelpText>Greater than 7/1/2018</inlineHelpText>
    <label>Bill62 Total Processed Payments (date)</label>
    <summarizedField>Bill62__Subscription__c.Total_Paid_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Bill62__Subscription__c.Bill62__Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2018</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Bill62__Subscription__c.Bill62__Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>6/30/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Bill62__Subscription__c.Bill62__Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>