force-app/main/default/objects/Contact/fields/Bookkeeping_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Specialist__c</fullName>
    <formula>Account.Bookkeeping_Specialist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookkeeping Specialist</label>
    <type>Text</type>
</CustomField>