force-app/main/default/objects/Contact/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <label>CampaignID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>