force-app/main/default/objects/Contact/fields/CAP_del__c.field-meta.xml
<CustomField>
    <fullName>CAP_del__c</fullName>
    <formula>INCLUDES( Account.Sales_Rep__r.Skills_Sales__c ,&quot;CAP&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAP</label>
    <type>Checkbox</type>
</CustomField>