force-app/main/default/objects/Contact/fields/Client_Advisory_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Advisory_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Advisory Email Sent</label>
    <type>Checkbox</type>
</CustomField>