force-app/main/default/objects/Contact/fields/ClientBooks_Trial__c.field-meta.xml
<CustomField>
    <fullName>ClientBooks_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClientBooks Trial</label>
    <type>Checkbox</type>
</CustomField>