force-app/main/default/objects/Contact/fields/ClientBooks_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ClientBooks_Trial_End_Date__c</fullName>
    <description>CB Trial End Dt calculates either 15 or 30 Days after the Date trial Extended, based on whether the picklist value for 15 days or 30 days was selected.</description>
    <formula>IF(ISPICKVAL(ClientBooks_Trial_Extension__c  , &quot;15 Days&quot;) ,  Date_Trial_Extended__c +15,  Date_Trial_Extended__c +30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CB Trial End Dt calculates either 15 or 30 Days after the Date trial Extended, based on whether the picklist value for 15 days or 30 days was selected.</inlineHelpText>
    <label>ClientBooks Trial End Date</label>
    <type>Date</type>
</CustomField>