force-app/main/default/objects/Contact/fields/ClientBooks_Trial_Extension__c.field-meta.xml
<CustomField>
    <fullName>ClientBooks_Trial_Extension__c</fullName>
    <description>Number of days the ClientBooks Trial has been extended.</description>
    <inlineHelpText>Number of days the ClientBooks Trial has been extended.</inlineHelpText>
    <label>ClientBooks Trial Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>