force-app/main/default/objects/Contact/fields/ClientBooks_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>ClientBooks_Trial_Type__c</fullName>
    <label>ClientBooks Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>