force-app/main/default/objects/Contact/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <formula>INCLUDES( Account.Sales_Rep__r.Skills_Sales__c ,&quot;Closer&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer</label>
    <type>Checkbox</type>
</CustomField>