force-app/main/default/objects/Contact/fields/Company_Brand__c.field-meta.xml
<CustomField>
    <fullName>Company_Brand__c</fullName>
    <formula>Account.Company_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Brand</label>
    <type>Text</type>
</CustomField>