force-app/main/default/objects/Contact/fields/Consulted_By__c.field-meta.xml
<CustomField>
    <fullName>Consulted_By__c</fullName>
    <formula>Account.Pitched__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulted By</label>
    <type>Text</type>
</CustomField>