force-app/main/default/objects/Contact/fields/Consulted_by_email__c.field-meta.xml
<CustomField>
    <fullName>Consulted_by_email__c</fullName>
    <formula>Account.Consulted_by_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulted by email</label>
    <type>Text</type>
</CustomField>