force-app/main/default/objects/Contact/fields/Consulted_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consulted_By_Phone__c</fullName>
    <formula>Account.Consulted_By_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulted By - Phone</label>
    <type>Text</type>
</CustomField>