force-app/main/default/objects/Contact/fields/Consulted_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulted_Date__c</fullName>
    <description>The Date/Time the Account was first consulted</description>
    <formula>Account.Pitched_Date__c</formula>
    <label>Consulted Date</label>
    <type>DateTime</type>
</CustomField>