force-app/main/default/objects/Contact/fields/Contact_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Role__c</fullName>
    <formula>Account.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Role</label>
    <type>Text</type>
</CustomField>