force-app/main/default/objects/Contact/fields/Corp_UpsalesAcct__c.field-meta.xml
<CustomField>
    <fullName>Corp_UpsalesAcct__c</fullName>
    <formula>INCLUDES(  Account.Sales_Rep__r.Skills_Sales__c ,&quot;Corp Upsales&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Upsales</label>
    <type>Checkbox</type>
</CustomField>