force-app/main/default/objects/Contact/fields/Courtesy_Friendliness_del__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Friendliness_del__c</fullName>
    <label>Courtesy &amp; Friendliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>