force-app/main/default/objects/Contact/fields/Date_Trial_Extended__c.field-meta.xml
<CustomField>
    <fullName>Date_Trial_Extended__c</fullName>
    <description>The date that ClientBooks Trial Extension was selected.</description>
    <inlineHelpText>The date that ClientBooks Trial Extension was selected.</inlineHelpText>
    <label>Date Trial Extended</label>
    <type>Date</type>
</CustomField>