force-app/main/default/objects/Contact/fields/Disable_Welcome_1800A_Email__c.field-meta.xml
<CustomField>
    <fullName>Disable_Welcome_1800A_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check-box determines if 1-800Accountant sends welcome &apos;Set Password&apos; email
Type: Checkbox
Unchecked by default

ER: 
false - Send &apos;1800A email&apos;
true -  Do Not Send &apos;1800A email&apos;</description>
    <label>Disable Welcome 1800A Email</label>
    <type>Checkbox</type>
</CustomField>