force-app/main/default/objects/Contact/fields/Discovery_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Completed__c</fullName>
    <formula>Account.Discovery_Call_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discovery Call Completed</label>
    <type>Checkbox</type>
</CustomField>