force-app/main/default/objects/Contact/fields/Dissolution__c.field-meta.xml
<CustomField>
    <fullName>Dissolution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dissolution</description>
    <label>Dissolution</label>
    <referenceTo>Dissolution__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>