force-app/main/default/objects/Contact/fields/Distribute_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Date__c</fullName>
    <formula>Account.Distribute_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribute Date</label>
    <type>Date</type>
</CustomField>