force-app/main/default/objects/Contact/fields/EZ_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>EZ_Customer_ID__c</fullName>
    <label>EZ Customer ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>