force-app/main/default/objects/Contact/fields/EZ_Package__c.field-meta.xml
<CustomField>
    <fullName>EZ_Package__c</fullName>
    <label>EZ Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>