force-app/main/default/objects/Contact/fields/Feedback_to_CEO_del__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_CEO_del__c</fullName>
    <label>Feedback to CEO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>