force-app/main/default/objects/Contact/fields/Financer__c.field-meta.xml
<CustomField>
    <fullName>Financer__c</fullName>
    <formula>INCLUDES(  Account.Sales_Rep__r.Skills_Sales__c  ,&quot;Finance&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance</label>
    <type>Checkbox</type>
</CustomField>