force-app/main/default/objects/Contact/fields/Initial_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Amount__c</fullName>
    <label>Initial Payment Amount</label>
    <summarizedField>Bill62__Subscription__c.CreatedDate</summarizedField>
    <summaryForeignKey>Bill62__Subscription__c.Bill62__Customer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>