force-app/main/default/objects/Contact/fields/INVOCA_FOR_SF__FormattedPhone__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__FormattedPhone__c</fullName>
    <label>FormattedPhone</label>
    <length>75</length>
    <type>Text</type>
</CustomField>